@@ -1442,7 +1442,7 @@ default or the value set via the <samp><span class="option">-S</span></samp> opt
      <p><a name="index-g_t_002dP_002c-Test_002dspecific-46"></a><br><dt><code>-P &lt;optionspec&gt;</code><dd>Set the local and/or remote port numbers for the data connection.
 
      <p><a name="index-g_t_002ds_002c-Test_002dspecific-47"></a><br><dt><code>-s &lt;sizespec&gt;</code><dd>This option sets the local send and receive socket buffer sizes for
-the control connection to the value(s) specified.  Often, this will
+the data connection to the value(s) specified.  Often, this will
 affect the advertised and/or effective TCP or other window, but on
 some platforms it may not. By default the units are bytes, but suffix
 of &ldquo;G,&rdquo; &ldquo;M,&rdquo; or &ldquo;K&rdquo; will specify the units to be 2^30 (GB), 2^20
@@ -1463,7 +1463,7 @@ ignore history. [Default: 0 - use the system's default socket buffer
 sizes]
 
      <p><a name="index-g_t_002dS-Test_002dspecific-48"></a><br><dt><code>-S &lt;sizespec&gt;</code><dd>This option sets the remote send and/or receive socket buffer sizes
-for the control connection to the value(s) specified.  Often, this
+for the data connection to the value(s) specified.  Often, this
 will affect the advertised and/or effective TCP or other window, but
 on some platforms it may not. By default the units are bytes, but
 suffix of &ldquo;G,&rdquo; &ldquo;M,&rdquo; or &ldquo;K&rdquo; will specify the units to be 2^30
@@ -2091,7 +2091,7 @@ respectively. For example:
 or 16384 bytes. [Default: 1 - a single-byte request and response ]
 
      <p><a name="index-g_t_002ds_002c-Test_002dspecific-57"></a><br><dt><code>-s &lt;sizespec&gt;</code><dd>This option sets the local send and receive socket buffer sizes for
-the control connection to the value(s) specified.  Often, this will
+the data connection to the value(s) specified.  Often, this will
 affect the advertised and/or effective TCP or other window, but on
 some platforms it may not. By default the units are bytes, but a
 suffix of &ldquo;G,&rdquo; &ldquo;M,&rdquo; or &ldquo;K&rdquo; will specify the units to be 2^30
@@ -2109,7 +2109,7 @@ true for all stacks. [Default: 0 - use the system's default socket
 buffer sizes]
 
      <p><a name="index-g_t_002dS_002c-Test_002dspecific-58"></a><br><dt><code>-S &lt;sizespec&gt;</code><dd>This option sets the remote send and/or receive socket buffer sizes
-for the control connection to the value(s) specified.  Often, this
+for the data connection to the value(s) specified.  Often, this
 will affect the advertised and/or effective TCP or other window, but
 on some platforms it may not. By default the units are bytes, but a
 suffix of &ldquo;G,&rdquo; &ldquo;M,&rdquo; or &ldquo;K&rdquo; will specify the units to be 2^30
